--- a/Proyecto_SM/app/src/main/AndroidManifest.xml
+++ b/Proyecto_SM/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.psm.proyecto_sm">
 
     <application
@@ -10,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto_SM">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.DraftActivity" />
+        <activity android:name=".activities.EditActivity" />
+        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.PostActivity" />
+        <activity android:name=".activities.ProfileActivity" />
+        <activity android:name=".activities.PublishActivity" />
+        <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".activities.SearchActivity" />
     </application>
 
 </manifest>
