--- a/Proyecto_SM/app/build.gradle
+++ b/Proyecto_SM/app/build.gradle
@@ -45,6 +45,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //Imagenes circulares
+    //noinspection GradleCompatible
+    implementation 'com.android.support:CardView-v7:28.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+
+
     implementation 'com.android.volley:volley:1.2.1'
 }
 
